--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^14.0.3",
     "@types/mdx": "^2.0.10",
+    "@u-wave/react-vimeo": "^0.9.10",
     "bright": "^0.8.4",
     "dayjs": "^1.11.10",
     "jotai": "^2.5.1",
